Use result from histogram instead of separate count and sum (#10214)
In txmetrics and servicetxmetrics, currently there are separate counts & sums to aggregate count and duration from events. This may however lead to discrepancy between these counts & sums and the results we extract from histograms, due to rounding errors for count and histogram precision for sum. In order to avoid UI weirdness, use result from histogram and remove separate counts and sums.

--- a/changelogs/8.7.asciidoc
+++ b/changelogs/8.7.asciidoc
@@ -30,13 +30,13 @@ https://github.com/elastic/apm-server/compare/8.6\...8.7[View commits]
 ==== Added
 - Add `event.success_count` to transaction events and transaction metrics {pull}9819[9819] {pull}10165[10165]
 - Set `_doc_count` for service destination metrics {pull}9931[9931]
-- Add `transaction.duration.summary` to transaction metrics {pull}9973[9973] {pull}10185[10185]
+- Add `transaction.duration.summary` to transaction metrics {pull}9973[9973] {pull}10214[10214]
 - Add `service.language.name` to service transaction metrics and service summary metrics {pull}10111[10111]
 - Add global labels to service destination metrics {pull}10056[10056]
 - Improve APM UI query performance by producing `1m`, `10m` and `60m` aggregation intervals for transaction metrics. Store them into dedicated data streams `metrics-apm.transaction.${interval}` {pull}9846[9846]
 - Improve APM UI query performance by producing `1m`, `10m` and `60m` aggregation intervals for service destination metrics. Store them into dedicated data streams `metrics-apm.service_destination.${interval}` {pull}9926[9926]
 - Improve APM UI query performance by producing `1m`, `10m` and `60m` aggregation intervals for service metrics. Store them into dedicated data streams `metrics-apm.service.${interval}` {pull}9960[9960]
-- Add histogram support to service metrics aggregations {pull}9864[9864]
+- Add histogram support to service metrics aggregations {pull}9864[9864] {pull}10214[10214]
 - Add a service summary metrics aggregator that writes to `metrics-apm.service_summary.${interval}` with `1m`, `10m` and `60m` intervals {pull}10029[10029]
 - Service metrics and service summary aggregations are now always enabled {pull}10060[10060] {pull}10109[10109]
 - Dedicated overflow buckets for transaction, service, service destination and service summary aggregation to limit cardinality {pull}10069[10069] {pull}9856[9856] {pull}10061[10061]
