docs: add agg metrics

--- a/docs/data-streams.asciidoc
+++ b/docs/data-streams.asciidoc
@@ -45,7 +45,7 @@ Traces are stored in the following data streams:
 
 
 Metrics::
-Metrics include application-based metrics and basic system metrics.
+Metrics include application-based metrics, aggregation metrics, and basic system metrics.
 Metrics are stored in the following data streams:
 +
 // tag::metrics-data-streams[]
