--- a/docs/data-streams.asciidoc
+++ b/docs/data-streams.asciidoc
@@ -18,6 +18,7 @@ See the {fleet-guide}/data-streams.html[{fleet} and {agent} Guide] to learn more
 [[apm-data-streams-naming-scheme]]
 === Data stream naming scheme
 
+// tag::data-streams[]
 APM data follows the `<type>-<dataset>-<namespace>` naming scheme.
 The `type` and `dataset` are predefined by the APM integration,
 but the `namespace` is your opportunity to customize how different types of data are stored in {es}.
@@ -25,6 +26,7 @@ There is no recommendation for what to use as your namespace--it is intentionall
 For example, you might create namespaces for each of your environments,
 like `dev`, `prod`, `production`, etc.
 Or, you might create namespaces that correspond to strategic business units within your organization.
+// end::data-streams[]
 
 [discrete]
 [[apm-data-streams-list]]
@@ -43,7 +45,7 @@ Traces are stored in the following data streams:
 
 
 Metrics::
-Metrics include application-based metrics and basic system metrics.
+Metrics include application-based metrics, aggregation metrics, and basic system metrics.
 Metrics are stored in the following data streams:
 +
 // tag::metrics-data-streams[]
