--- a/changelogs/8.7.asciidoc
+++ b/changelogs/8.7.asciidoc
@@ -48,3 +48,4 @@ https://github.com/elastic/apm-server/compare/8.6\...8.7[View commits]
 - Translate otel log events to error events {pull}10066[10066]
 - Use Elasticsearch fetcher for agent remote configuration where possible {pull}9720[9720] {pull}10088[10088]
 - Fetch sourcemaps from Elasticsearch {pull}9722[9722]
+- Add overflow metrics for transaction, span metrics, service transaction and service summary metrics {pull}10330[10330]
