--- a/changelogs/8.7.asciidoc
+++ b/changelogs/8.7.asciidoc
@@ -40,7 +40,7 @@ https://github.com/elastic/apm-server/compare/8.6\...8.7[View commits]
 - Add histogram support to service metrics aggregations {pull}9864[9864] {pull}10214[10214]
 - Add a service summary metrics aggregator that writes to `metrics-apm.service_summary.${interval}` with `1m`, `10m` and `60m` intervals {pull}10029[10029]
 - Service metrics and service summary aggregations are now always enabled {pull}10060[10060] {pull}10109[10109]
-- Dedicated overflow buckets for transaction, service, service destination and service summary aggregation to limit cardinality {pull}10069[10069] {pull}9856[9856] {pull}10061[10061]
+- Dedicated overflow buckets for transaction, service, service destination and service summary aggregation to limit cardinality {pull}10069[10069] {pull}9856[9856] {pull}10061[10061] {pull}10362[10362]
 - Automatically scale `MaxGroups`, `MaxTransactionGroups` and `MaxServices` based on available memory {pull}9856[9856] {pull}10157[10157]
 - Set data streams with non-default rollup intervals as hidden {pull}10070[10070]
 - Rename service metrics to service transaction metrics {pull}10095[10095]
