--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -5,6 +5,7 @@ https://github.com/elastic/apm-server/compare/8.7\...main[View commits]
 
 [float]
 ==== Breaking Changes
+- Store app logs into service-specific data streams{pull}10456[10456]
 
 [float]
 ==== Deprecations
