docs: apm agent config

--- a/docs/legacy/configuring.asciidoc
+++ b/docs/legacy/configuring.asciidoc
@@ -25,6 +25,8 @@ include::{libbeat-dir}/shared/configuring-intro.asciidoc[]
 
 include::./configuration-process.asciidoc[]
 
+include::./configuration-agent-config.asciidoc[]
+
 include::./configuration-anonymous.asciidoc[]
 
 include::{libbeat-dir}/shared-instrumentation.asciidoc[]
