--- a/docs/legacy/configuring.asciidoc
+++ b/docs/legacy/configuring.asciidoc
@@ -11,6 +11,7 @@ If you've already upgraded, please see <<input-apm>> instead.
 include::{libbeat-dir}/shared/configuring-intro.asciidoc[]
 
 * <<configuration-process>>
+* <<configure-agent-config>>
 * <<configuration-anonymous>>
 * <<configuration-instrumentation>>
 * <<jaeger-reference>>
