--- a/docs/legacy/configuration-agent-config.asciidoc
+++ b/docs/legacy/configuration-agent-config.asciidoc
@@ -62,11 +62,20 @@ Authentication with an API key. Formatted as `id:api_key`
 [float]
 === Common problems
 
-You may see the following HTTP 403 error from APM Server when it attempts to fetch APM agent configuration:
+You may see either of the following HTTP 403 errors from APM Server when it attempts to fetch APM agent configuration:
+
+APM agent log:
 
 [source,log]
 ----
 "Your Elasticsearch configuration does not support agent config queries. Check your configurations at `output.elasticsearch` or `apm-server.agent.config.elasticsearch`."
+----
+
+APM Server log:
+
+[source,log]
+----
+rejecting fetch request: no valid elasticsearch config
 ----
 
 This occurs because the user or API key set in either `apm-server.agent.config.elasticsearch` or `output.elasticsearch`
