--- a/docs/log-correlation.asciidoc
+++ b/docs/log-correlation.asciidoc
@@ -35,16 +35,16 @@ See the relevant https://www.elastic.co/guide/en/apm/agent/index.html[Agent docu
 
 Once log correlation is enabled, you must ensure your logs contain APM identifiers.
 
-Log correlation relies on two set of fields:
-- at service level: {ecs-ref}/ecs-service.html[`service.name`], {ecs-ref}/ecs-service.html[`service.version`] and {ecs-ref}/ecs-service.html[`service.environment`]
-- at trace level: {ecs-ref}/ecs-tracing.html[`trace.id`] and {ecs-ref}/ecs-tracing.html[`transaction.id`]
+Log correlation relies on these fields:
+- Service level: {ecs-ref}/ecs-service.html[`service.name`], {ecs-ref}/ecs-service.html[`service.version`], and {ecs-ref}/ecs-service.html[`service.environment`]
+- Trace level: {ecs-ref}/ecs-tracing.html[`trace.id`] and {ecs-ref}/ecs-tracing.html[`transaction.id`]
 
 In some supported frameworks, this is already done for you.
 In other scenarios, like for unstructured logs, you'll need to add APM identifiers to your logs in any easy to parse manner.
 
-Log correlation relies on two set of fields:
-- at service level: {ecs-ref}/ecs-service.html[`service.name`], {ecs-ref}/ecs-service.html[`service.version`] and {ecs-ref}/ecs-service.html[`service.environment`]
-- at trace level: {ecs-ref}/ecs-tracing.html[`trace.id`] and {ecs-ref}/ecs-tracing.html[`transaction.id`]
+Log correlation relies on these fields:
+- Service level: {ecs-ref}/ecs-service.html[`service.name`], {ecs-ref}/ecs-service.html[`service.version`], and {ecs-ref}/ecs-service.html[`service.environment`]
+- Trace level: {ecs-ref}/ecs-tracing.html[`trace.id`] and {ecs-ref}/ecs-tracing.html[`transaction.id`]
 
 The process for adding these fields will differ based the Agent you're using, the logging framework,
 and the type and structure of your logs.
