--- a/docs/legacy/configure-kibana-endpoint.asciidoc
+++ b/docs/legacy/configure-kibana-endpoint.asciidoc
@@ -7,10 +7,13 @@
 
 IMPORTANT: {deprecation-notice-config}
 
-Configuring the {kib} endpoint is required for
-{kibana-ref}/agent-configuration.html[APM Agent configuration in {kib}].
-You configure the endpoint in the `apm-server.kibana` section of the
-+{beatname_lc}.yml+ config file.
+You must configure the {kib} endpoint if running APM Server standalone--this allows APM Server to verify that
+the APM package has been installed. The {kib} endpoint is also equired for APM agent configuration when using
+an output other than {es}.
+
+For all other use-cases, starting in version 8.7.0, APM agent configurations will be fetched directly from {es}.
+Configuring and enabling the {kib} endpoint is only used as a fallback.
+Please see <<configure-agent-config>> instead.
 
 Here's a sample configuration:
 
@@ -19,17 +22,6 @@ Here's a sample configuration:
 apm-server.kibana.enabled: true
 apm-server.kibana.host: "http://localhost:5601"
 ----
-
-[float]
-=== Considerations
-
-* If your setup uses a <<config-secret-token,secret token>> for Agent/Server communication,
-the same token is used to secure this endpoint.
-* It's important to still set relevant defaults locally in each Agent's configuration.
-If APM Server is unreachable, slow to respond, returns an error, etc.,
-defaults set in the agent will apply according to their precedence.
-* APM Server needs sufficient {kib} privileges to manage central configuration.
-See <<privileges-agent-central-config>> for a list of required privileges.
 
 [float]
 === {kib} endpoint configuration options
@@ -87,6 +79,11 @@ The basic authentication username for connecting to {kib}.
 The basic authentication password for connecting to {kib}.
 
 [float]
+==== `apm-server.kibana.api_key`
+
+Authentication with an API key. Formatted as `id:api_key`
+
+[float]
 [[kibana-path-option]]
 ==== `apm-server.kibana.path`
 
@@ -114,15 +111,3 @@ apm-server.kibana.ssl.key: "/etc/pki/client/cert.key"
 
 For information on the additional SSL configuration options,
 see <<configuration-ssl>>.
-
-[float]
-=== Agent Config configuration options
-
-You can specify the following options in the `apm-server.agent.config` section of the
-+{beatname_lc}.yml+ config file:
-
-[float]
-==== `agent.config.cache.expiration`
-
-When using APM Agent configuration, information fetched from {kib} will be cached in memory.
-This setting specifies the time before cache key expiration. Defaults to 30 seconds.
