--- a/changelogs/8.7.asciidoc
+++ b/changelogs/8.7.asciidoc
@@ -16,11 +16,15 @@ https://github.com/elastic/apm-server/compare/8.6\...8.7[View commits]
 - Stop indexing transaction metrics to `metrics-apm.internal` {pull}9846[9846]
 - Stop indexing span destination metrics to `metrics-apm.internal` {pull}9926[9926]
 - `apmserver.aggregation.txmetrics.overflowed` metric has been renamed to `apmserver.aggregation.txmetrics.overflowed.total` {pull}10330[10330]
+- Elasticsearch sourcemapping credentials require access to the `.apm-source-map` index {pull}9722[9722]
+- Change APM Server default host to 127.0.0.1 {pull}9877[9877]
 
 [float]
 ==== Bug fixes
 - We no longer unconditionally block shutdown for 5 seconds when tail-based sampling is enabled {pull}9838[9838]
 - Fix a panic caused by accepting new grpc connections during shutdown {pull}10013[10013]
+- Fix goroutine leak in libbeat final processor {pull}10247[10247]
+- Fix servicemetrics aggregator name typo {pull}10022[10022]
 
 [float]
 ==== Intake API Changes
@@ -33,20 +37,21 @@ https://github.com/elastic/apm-server/compare/8.6\...8.7[View commits]
 - Set `_doc_count` for service destination metrics {pull}9931[9931]
 - Add `transaction.duration.summary` to transaction metrics {pull}9973[9973] {pull}10214[10214]
 - Add `service.language.name` to service transaction metrics and service summary metrics {pull}10111[10111]
-- Add global labels to service destination metrics {pull}10056[10056]
+- Add global labels to service destination metrics {pull}10056[10056] {pull}10297[10297]
 - Improve APM UI query performance by producing `1m`, `10m` and `60m` aggregation intervals for transaction metrics. Store them into dedicated data streams `metrics-apm.transaction.${interval}` {pull}9846[9846]
 - Improve APM UI query performance by producing `1m`, `10m` and `60m` aggregation intervals for service destination metrics. Store them into dedicated data streams `metrics-apm.service_destination.${interval}` {pull}9926[9926]
 - Improve APM UI query performance by producing `1m`, `10m` and `60m` aggregation intervals for service metrics. Store them into dedicated data streams `metrics-apm.service.${interval}` {pull}9960[9960]
-- Add histogram support to service metrics aggregations {pull}9864[9864] {pull}10214[10214]
+- Add histogram support to service metrics aggregations {pull}9864[9864] {pull}10214[10214] {pull}10127[10127] {pull}10216[10216]
 - Add a service summary metrics aggregator that writes to `metrics-apm.service_summary.${interval}` with `1m`, `10m` and `60m` intervals {pull}10029[10029]
 - Service metrics and service summary aggregations are now always enabled {pull}10060[10060] {pull}10109[10109]
-- Dedicated overflow buckets for transaction, service, service destination and service summary aggregation to limit cardinality {pull}10069[10069] {pull}9856[9856] {pull}10061[10061] {pull}10362[10362]
-- Automatically scale `MaxGroups`, `MaxTransactionGroups` and `MaxServices` based on available memory {pull}9856[9856] {pull}10157[10157]
+- Dedicated overflow buckets for transaction, service, service destination and service summary aggregation to limit cardinality {pull}10069[10069] {pull}9856[9856] {pull}10061[10061] {pull}10302[10302] {pull}10362[10362] {pull}9911[9911] {pull}10012[10012]
+- Automatically scale `MaxGroups`, `MaxTransactionGroups` and `MaxServices` based on available memory {pull}9856[9856] {pull}10157[10157] {pull}10190[10190]
 - Set data streams with non-default rollup intervals as hidden {pull}10070[10070]
-- Rename service metrics to service transaction metrics {pull}10095[10095]
+- Rename service metrics to service transaction metrics {pull}10095[10095] {pull}10110[10110]
 - Reduce memory usage of transaction and service transaction aggregations {pull}10178[10178]
 - Metrics data streams now use synthetic source {pull}9756[9756]
-- Translate otel log events to error events {pull}10066[10066]
-- Use Elasticsearch fetcher for agent remote configuration where possible {pull}9720[9720] {pull}10088[10088]
-- Fetch sourcemaps from Elasticsearch {pull}9722[9722]
+- Translate otel log events to error events {pull}10066[10066] {pull}10128[10128]
+- Use Elasticsearch fetcher for agent remote configuration where possible {pull}9720[9720] {pull}10088[10088] {pull}10115[10115]
+- Fetch sourcemaps from Elasticsearch {pull}9722[9722] {pull}10367[10367] {pull}10360[10360] {pull}10106[10106]
 - Add overflow metrics for transaction, span metrics, service transaction and service summary metrics {pull}10330[10330]
+- Add support for RHEL 9 {pull}10317[10317]
