--- a/changelogs/8.0.asciidoc
+++ b/changelogs/8.0.asciidoc
@@ -177,7 +177,7 @@ No significant changes.
 ==== Breaking Changes
 * APM Server now responds with 403 (HTTP) and PermissionDenied (gRPC) for authenticated but unauthorized requests {pull}5545[5545]
 * `sourcemap.error` and `sourcemap.updated` are no longer set due to failing to find a matching source map {pull}5631[5631]
-* experimental:["This breaking change applies to the experimental <<apm-integration>>."] Removed `service.name` from dataset {pull}5451[5451]
+* experimental:["This breaking change applies to the experimental APM integration."] Removed `service.name` from dataset {pull}5451[5451]
 
 // [float]
 // ==== Bug fixes
