--- a/docs/legacy/configuring-ingest.asciidoc
+++ b/docs/legacy/configuring-ingest.asciidoc
@@ -1,7 +1,7 @@
 [[configuring-ingest-node]]
 == Parse data using ingest node pipelines
 
-deprecated::[7.16.0,Users should now use the <<apm-integration>>. See <<ingest-pipelines>> if you've already upgraded.]
+deprecated::[7.16.0,Users should now use the APM integration. See <<ingest-pipelines>> if you've already upgraded.]
 
 // Appends `-legacy` to each section's ID so that they are different from the APM integration IDs
 :append-legacy: -legacy
