--- a/changelogs/8.7.asciidoc
+++ b/changelogs/8.7.asciidoc
@@ -3,7 +3,18 @@
 
 https://github.com/elastic/apm-server/compare/8.6\...8.7[View commits]
 
+* <<release-notes-8.7.1>>
 * <<release-notes-8.7.0>>
+
+[float]
+[[release-notes-8.7.1]]
+=== APM version 8.7.1
+
+https://github.com/elastic/apm-server/compare/v8.7.0\...v8.7.1[View commits]
+
+[float]
+==== Bug fixes
+- Fix an indexing failures for metric, error and log documents when `agent.activation_method` is set {pull}xxxx[xxxx]
 
 [float]
 [[release-notes-8.7.0]]
