--- a/changelogs/8.7.asciidoc
+++ b/changelogs/8.7.asciidoc
@@ -3,7 +3,14 @@
 
 https://github.com/elastic/apm-server/compare/8.6\...8.7[View commits]
 
+* <<release-notes-8.7.1>>
 * <<release-notes-8.7.0>>
+
+[float]
+[[release-notes-8.7.1]]
+=== APM version 8.7.1
+
+https://github.com/elastic/apm-server/compare/v8.7.0\...v8.7.1[View commits]
 
 [float]
 [[release-notes-8.7.0]]
