--- a/changelogs/8.7.asciidoc
+++ b/changelogs/8.7.asciidoc
@@ -13,6 +13,10 @@ https://github.com/elastic/apm-server/compare/8.6\...8.7[View commits]
 https://github.com/elastic/apm-server/compare/v8.7.0\...v8.7.1[View commits]
 
 [float]
+==== Bug fixes
+- Fix indexing failures for metric, error and log documents when `agent.activation_method` is set {pull}10522[10522]
+
+[float]
 [[release-notes-8.7.0]]
 === APM version 8.7.0
 
