--- a/changelogs/8.7.asciidoc
+++ b/changelogs/8.7.asciidoc
@@ -15,6 +15,7 @@ https://github.com/elastic/apm-server/compare/v8.7.0\...v8.7.1[View commits]
 [float]
 ==== Bug fixes
 - Fix indexing failures for metric, error and log documents when `agent.activation_method` is set {pull}10522[10522]
+- Use droppedspan outcome in spanmetrics aggregation {pull}10592[10592]
 
 [float]
 [[release-notes-8.7.0]]
