remove deprecation notices

--- a/docs/legacy/copied-from-beats/docs/keystore.asciidoc
+++ b/docs/legacy/copied-from-beats/docs/keystore.asciidoc
@@ -12,7 +12,7 @@
 [[keystore]]
 === Secrets keystore for secure settings
 
-IMPORTANT: {deprecation-notice-installation}
+IMPORTANT: -installation}
 
 ++++
 <titleabbrev>Secrets keystore</titleabbrev>
