fix local links

--- a/docs/legacy/copied-from-beats/outputs/logstash/docs/logstash.asciidoc
+++ b/docs/legacy/copied-from-beats/outputs/logstash/docs/logstash.asciidoc
@@ -101,7 +101,7 @@ with a {logstash-ref}/use-ingest-pipelines.html[{ls} pipeline config].
 <4> The current version of {beatname_uc}.
 
 In addition to metadata, {beatname_uc} provides the `processor.event` field, which
-can be used to separate {apm-overview-ref-v}/apm-data-model.html[event types] into different indices.
+can be used to separate {apm-guide-ref}/data-model.html[event types] into different indices.
 endif::[]
 
 ifndef::apm-server[]
