--- a/docs/integrations-index.asciidoc
+++ b/docs/integrations-index.asciidoc
@@ -182,6 +182,6 @@ include::./legacy/fields.asciidoc[leveloffset=+1]
 
 include::./legacy/troubleshooting.asciidoc[leveloffset=+1]
 
-include::./legacy/breaking-changes.asciidoc[leveloffset=+1]
+// include::./legacy/breaking-changes.asciidoc[leveloffset=+1]
 
 include::./legacy/redirects.asciidoc[]
