fix local links
# Conflicts:
#	changelogs/7.15.asciidoc

--- a/docs/integrations-index.asciidoc
+++ b/docs/integrations-index.asciidoc
@@ -178,6 +178,6 @@ include::./legacy/fields.asciidoc[leveloffset=+1]
 
 include::./legacy/troubleshooting.asciidoc[leveloffset=+1]
 
-include::./legacy/breaking-changes.asciidoc[leveloffset=+1]
+// include::./legacy/breaking-changes.asciidoc[leveloffset=+1]
 
 include::./legacy/redirects.asciidoc[]
