delete duplicate API section APM Server Reference

--- a/docs/legacy/high-availability.asciidoc
+++ b/docs/legacy/high-availability.asciidoc
@@ -8,7 +8,7 @@ for example HAProxy or Nginx.
 The endpoint `/` always returns an `HTTP 200`.
 You can configure your load balancer to send HTTP requests to this endpoint
 to determine if an APM Server is running.
-See <<server-info>> for more information on that endpoint.
+See <<api-info>> for more information on that endpoint.
 
 In case of temporal issues, like unavailable {es} or a sudden high workload,
 APM Server does not have an internal queue to buffer requests,
